--- a/src/app/components/navigator/navigator.component.html
+++ b/src/app/components/navigator/navigator.component.html
@@ -5,7 +5,7 @@
 <!--</ul>-->
 
 <nav>
-  <a routerLinkActive="current" routerLink="" class="nav-link meet-now {{browser === 'MS-Edge' ? 'edge' : ''}}"
+  <a routerLinkActive="current" routerLink="/" class="nav-link meet-now {{browser === 'MS-Edge' ? 'edge' : ''}}"
      [routerLinkActiveOptions]="{exact: true}">
     <span class="svg-container meet-now"></span>
     <!--  <ng-include src=":: 'app/components/navigation/icons/meet_now.svg'"></ng-include>-->
