--- a/src/assets/styles/brandingURLs.less
+++ b/src/assets/styles/brandingURLs.less
@@ -52,4 +52,4 @@
 
 @url-logo:               url('@{base-path}/assets/images/ic_common_equinoxWebLogo.svg');
 //@url-background:         url('@{base-path}/assets/images/background.jpg');
-@url-loader:             url('@{base-path}/assets/images/loader.svg');
+//@url-loader:             url('@{base-path}/assets/images/loader.svg');
