--- a/src/assets/styles/urls.less
+++ b/src/assets/styles/urls.less
@@ -37,8 +37,8 @@
 //@url-schedule-search:    url(../../app/components/schedule/icons/search_schedule_120px.svg);
 //
 //@url-calendar:           url(../../app/shared/utilities/icons/calendar.svg);
-@url-eye:                url('@{base-path}/app/shared/utilities/icons/ic_eye_show.svg');
-@url-eye-hide:           url('@{base-path}/app/shared/utilities/icons/ic_eye_hide.svg');
+//@url-eye:                url('@{base-path}/app/shared/utilities/icons/ic_eye_show.svg');
+//@url-eye-hide:           url('@{base-path}/app/shared/utilities/icons/ic_eye_hide.svg');
 
 @url-down-chevron_white: url(../../assets/icons/ic_common_downChevron_white.svg);
 @url-down-chevron:       url(../../assets/icons/ic_common_downChevron.svg);
