working on join component

--- a/src/app/components/join/join.component.html
+++ b/src/app/components/join/join.component.html
@@ -135,8 +135,8 @@ intended publication of such source code.
 
       <app-join-input class="white-arrow"
                       [options]="optionsForJoinGuest"
-                      [url]="myMeetings?.selectedVirtualRoom.url"
-                      [meetingId]="meeting.id"
+                      [url]="myMeetings?.selectedVirtualRoom?.url"
+                      [meetingId]="meeting?.id"
                       [virtualRoom]="myMeetings?.selectedVirtualRoom"
       ></app-join-input>
 
