working on join component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@ intended publication of such source code.
 <ng-template #loading>
   <app-header></app-header>
   <app-navigator></app-navigator>
-  <main id="main" class="upc.{{activeRoute}}">
+  <main id="main" class="upc-{{activeRoute}}">
     <router-outlet></router-outlet>
   </main>
 </ng-template>
