--- a/src/assets/styles/layout.less
+++ b/src/assets/styles/layout.less
@@ -138,7 +138,7 @@ main {
   height: ~"calc(100% - 50px)";
   background: @background;
 
-  &.upc\.join {
+  &.upc-join {
     background: @background-front-page;
   }
 
