--- a/src/assets/styles/urls.less
+++ b/src/assets/styles/urls.less
@@ -4,8 +4,8 @@
 @url-avatar-signin:      url(../../app/components/header/icons/ic_portal_signin.svg);
 @url-icon-settings:      url(../../app/components/header/icons/ic_portal_settings.svg);
 //@url-adjust-av-dark:     url(../../app/components/join/icons/adjust_av_dark.svg);
-//@url-presentation-only:  url(../../app/shared/messageUtils/icons/ic_portal_presentaion.svg);
-//@url-use-browser-adjust: url(../../app/shared/messageUtils/icons/ic_portal_audiovideo.svg);
+@url-presentation-only:  url(src/app/shared/message-utils/icons/ic_portal_presentaion.svg);
+@url-use-browser-adjust: url(src/app/shared/message-utils/icons/ic_portal_audiovideo.svg);
 @url-download-client:    url(../../app/shared/message-utils/icons/ic_portal_app.svg);
 //@url-recent-meeting:     url(../../app/shared/utilities/icons/ic_portal_history.svg);
 //@url-use-browser-join:   url(../../app/shared/messageUtils/icons/ic_portal_browser.svg);
